update jvm